fixes #90 an attempt to fix the high contrast issue

--- a/css/style.css
+++ b/css/style.css
@@ -173,3 +173,10 @@ body > footer p {
 td.gsc-clear-button { 
     display: none !important; 
 } 
+
+/* All high contrast styling rules */
+@media screen and (-ms-high-contrast: active) {
+  .gsc-input {
+	 border: 2px solid white;
+   }
+}
